# cuj

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cuj/inc/: cuj.h
cuj/inc/cuj/: common.h  cuj.h
cuj/inc/cuj/ast/: ast.h  class.h  context.h  context_scope.h  expr.h  func.h  func_context.h  func_ex.h  func_trait.h  opr.h  stat.h  stat_builder.h  sugar.h  type_record.h  value.h
cuj/inc/cuj/ast/detail/: call_arg.inl  class.inl  context.inl  expr.inl  func.inl  func_context.inl  opr.inl  stat.inl  stat_builder.inl  value.inl
cuj/inc/cuj/builtin/: assert.h  string.h  system.h
cuj/inc/cuj/builtin/cuda/: cuda.h  texture.h  thread.h
cuj/inc/cuj/builtin/math/: atomic.h  basic.h  float2.h  float3.h  float4.h  lcg.h  math.h  pcg.h  vec1.h  vec2.h  vec3.h  vec4.h
cuj/inc/cuj/builtin/math/detail/: vec1.inl  vec2.inl  vec3.inl  vec4.inl
cuj/inc/cuj/builtin/system/: system.h
cuj/inc/cuj/core/: expr.h  func.h  intrinsic.h  intrinsic_types.txt  prog.h  stat.h  type.h  visit.h
cuj/inc/cuj/cstd/: assert.h  atomic.h  cstd.h  math.h  memory.h  ptx.h  random.h  system.h
cuj/inc/cuj/cstd/impl/: assert.inl  system.inl
cuj/inc/cuj/dsl/: arithmetic.h  arithmetic_reference.h  array.h  array_reference.h  bitcast.h  class.h  const_data.h  dsl.h  exit_scope.h  function.h  global_var.h  if.h  inline_asm.h  loop.h  module.h  pointer.h  pointer_reference.h  pointer_temp_var.h  reference.h  return.h  switch.h  type_context.h  variable.h  variable_forward.h
cuj/inc/cuj/dsl/impl/: arithmetic.inl  arithmetic_reference.inl  array.inl  array_reference.inl  bitcast.inl  class.inl  const_data.inl  exit_scope.inl  function.inl  global_var.inl  if.inl  inline_asm.inl  loop.inl  pointer.inl  pointer_reference.inl  return.inl  switch.inl  type_context.inl
cuj/inc/cuj/ir/: alloc.h  builder.h  func.h  op.h  prog.h  stat.h  type.h  val.h
cuj/inc/cuj/util/: atomic_add.h  cuda.h  indented_string_builder.h  macro_foreach.h  macro_overloading.h  scope_guard.h  type_list.h  uncopyable.h  untyped_owner.h  variant.h
cuj/inc/cuj/utils/: anonymous_name.h  foreach_type.h  macro_foreach.h  macro_overloading.h  printer.h  scope_guard.h  uncopyable.h  unreachable.h  variant.h
cuj/src/builtin/: assert.cpp  string.cpp  system.cpp
cuj/src/builtin/cuda/: texture.cpp  thread.cpp
cuj/src/builtin/math/: atomic.cpp  basic.cpp  float2.cpp  float3.cpp  float4.cpp  lcg.cpp  pcg.cpp
cuj/src/builtin/system/: system.cpp
cuj/src/core/: intrinsic.cpp  type.cpp  visit.cpp
cuj/src/cstd/: atomic.cpp  math.cpp  memory.cpp  ptx.cpp  random.cpp
cuj/src/dsl/: function.cpp  inline_asm.cpp  module.cpp  pointer_temp_var.cpp
cuj/src/ir/: builder.cpp
cuj/src/util/: atomic_add.cpp  cuda.cpp
cuj/src/utils/: printer.cpp
example/: CMakeLists.txt
example/00.main/: CMakeLists.txt  main.cpp
example/00.native_codegen/: CMakeLists.txt  main.cpp
example/00.vec_add/: CMakeLists.txt  main.cpp
example/01.vec_add/: CMakeLists.txt
example/cuda_texture/: CMakeLists.txt  main.cpp
example/dsl/: CMakeLists.txt  main.cpp
example/native_codegen/: CMakeLists.txt  main.cpp
example/pow/: CMakeLists.txt  main.cpp
example/sdf/: CMakeLists.txt  cuda.h  main.cpp  vec.h
example/sdf_renderer/: CMakeLists.txt  main.cpp
example/search_binary_tree/: CMakeLists.txt  main.cpp
example/test/: CMakeLists.txt  main.cpp
example/tex/: CMakeLists.txt  main.cpp
example/vec_add/: CMakeLists.txt
example/vec_sqrt_add/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
test/test/: array.cpp  bitcast.cpp  control_flow.cpp  cuda.cpp  function.cpp  main.cpp  math.cpp  mcjit.cpp  misc.cpp  operator.cpp  pointer.cpp  string.cpp  system.cpp  test.h  type.cpp
test/test/cuda/: cuda.cpp
test/test/math/: atomic.cpp  basic.cpp  float2.cpp  float3.cpp  float4.cpp  vec1f.cpp  vec2f.cpp  vec3f.cpp  vec4f.cpp
