PROJECT(CUJ-TEST)

FILE(GLOB_RECURSE CUJ_TEST_SRC
        "${CMAKE_CURRENT_SOURCE_DIR}/*.h"
        "${CMAKE_CURRENT_SOURCE_DIR}/*.inl"
        "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")

ADD_EXECUTABLE(CUJTest ${CUJ_TEST_SRC})

FOREACH(_SRC IN ITEMS ${CUJ_TEST_SRC})
    GET_FILENAME_COMPONENT(CUJ_TEST_SRC "${_SRC}" PATH)
    STRING(REPLACE "${CMAKE_CURRENT_SOURCE_DIR}/test" "src" _GRP_PATH "${CUJ_TEST_SRC}")
    STRING(REPLACE "/" "\\" _GRP_PATH "${_GRP_PATH}")
    SOURCE_GROUP("${_GRP_PATH}" FILES "${_SRC}")
ENDFOREACH()

SET_PROPERTY(TARGET CUJTest PROPERTY CXX_STANDARD 17)
SET_PROPERTY(TARGET CUJTest PROPERTY CXX_STANDARD_REQUIRED ON)

TARGET_INCLUDE_DIRECTORIES(CUJTest PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
TARGET_LINK_LIBRARIES(CUJTest PUBLIC cuj)
