PROJECT(CUJ-TEST)

FILE(GLOB_RECURSE CUJ_TEST_SRC
        "${CMAKE_CURRENT_SOURCE_DIR}/*.h"
        "${CMAKE_CURRENT_SOURCE_DIR}/*.inl"
        "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")

ADD_EXECUTABLE(cuj_test ${CUJ_TEST_SRC})

FOREACH(_SRC IN ITEMS ${CUJ_TEST_SRC})
    GET_FILENAME_COMPONENT(CUJ_TEST_SRC "${_SRC}" PATH)
    STRING(REPLACE "${CMAKE_CURRENT_SOURCE_DIR}/test" "src" _GRP_PATH "${CUJ_TEST_SRC}")
    STRING(REPLACE "/" "\\" _GRP_PATH "${_GRP_PATH}")
    SOURCE_GROUP("${_GRP_PATH}" FILES "${_SRC}")
ENDFOREACH()

SET_PROPERTY(TARGET cuj_test PROPERTY CXX_STANDARD 20)
SET_PROPERTY(TARGET cuj_test PROPERTY CXX_STANDARD_REQUIRED ON)

IF(CUJ_ENABLE_CUDA)
    TARGET_COMPILE_DEFINITIONS(cuj_test PUBLIC CUJ_ENABLE_CUDA=1)
    TARGET_LINK_LIBRARIES(cuj_test PUBLIC CUDA::nvrtc CUDA::cudart)
ELSE()
    TARGET_COMPILE_DEFINITIONS(cuj_test PUBLIC CUJ_ENABLE_CUDA=0)
ENDIF()

TARGET_INCLUDE_DIRECTORIES(cuj_test PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
TARGET_LINK_LIBRARIES(cuj_test PUBLIC cuj)
